#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lpthread -lm")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lpthread -lm")

add_executable(gertboard gertboard.c)
add_executable(buttons buttons.c)
add_executable(7segments 7segments.c)
add_executable(voltmeter voltmeter.c)
add_executable(temperature temperature.c)
add_executable(vumeter vumeter.c)
add_executable(record record.c)

target_link_libraries(gertboard PUBLIC wiringPi wiringPiDev)
target_link_libraries(buttons PUBLIC wiringPi wiringPiDev)
target_link_libraries(7segments PUBLIC wiringPi wiringPiDev)
target_link_libraries(voltmeter PUBLIC wiringPi wiringPiDev)
target_link_libraries(temperature PUBLIC wiringPi wiringPiDev)
target_link_libraries(vumeter PUBLIC wiringPi wiringPiDev)
target_link_libraries(record PUBLIC wiringPi wiringPiDev)
target_link_libraries(record PUBLIC wiringPi wiringPiDev)
